--- a/src/main/resources/assets/brass_geodes/lang/en_us.json
+++ b/src/main/resources/assets/brass_geodes/lang/en_us.json
@@ -51,6 +51,5 @@
   "block.brass_geodes.emerald_tinted_glass": "Emerald Tinted Glass",
   "block.brass_geodes.ruby_tinted_glass" : "Ruby Tinted Glass",
   "block.brass_geodes.sapphire_tinted_glass": "Sapphire Tinted Glass",
-  "block.brass_geodes.topaz_tinted_glass": "Topaz Tinted Glass",
-  "block.brass_geodes.amethyst_tinted_glass": "Amethyst Tinted Glass"
+  "block.brass_geodes.topaz_tinted_glass": "Topaz Tinted Glass"
 }
