--- a/src/main/resources/assets/brass_geodes/lang/fr_fr.json
+++ b/src/main/resources/assets/brass_geodes/lang/fr_fr.json
@@ -51,6 +51,5 @@
   "block.brass_geodes.emerald_tinted_glass": "Vitres teintées en émeraude",
   "block.brass_geodes.ruby_tinted_glass" : "Vitres teintées en rubis",
   "block.brass_geodes.sapphire_tinted_glass": "Vitres teintées en saphir",
-  "block.brass_geodes.topaz_tinted_glass": "Vitres teintées en topaze",
-  "block.brass_geodes.amethyst_tinted_glass": "Vitres teintées en améthyste"
+  "block.brass_geodes.topaz_tinted_glass": "Vitres teintées en topaze"
 }
