--- a/src/main/resources/assets/brass_geodes/lang/fr_fr.json
+++ b/src/main/resources/assets/brass_geodes/lang/fr_fr.json
@@ -16,11 +16,11 @@
   "block.brass_geodes.budding_sapphire": "Druse de saphir",
   "block.brass_geodes.budding_topaz": "Druse de topaze",
 
-  "block.brass_geodes.geode_diamond": "Bloc de diamant brut",
-  "block.brass_geodes.geode_emerald": "Bloc d'émeraude brut",
-  "block.brass_geodes.geode_ruby" : "Bloc de rubis brut",
-  "block.brass_geodes.geode_sapphire": "Bloc de saphir brut",
-  "block.brass_geodes.geode_topaz": "Bloc de topaze brut",
+  "block.brass_geodes.raw_diamond": "Bloc de diamant brut",
+  "block.brass_geodes.raw_emerald": "Bloc d'émeraude brut",
+  "block.brass_geodes.raw_ruby" : "Bloc de rubis brut",
+  "block.brass_geodes.raw_sapphire": "Bloc de saphir brut",
+  "block.brass_geodes.raw_topaz": "Bloc de topaze brut",
 
   "block.brass_geodes.diamond_cluster": "Amas de diamant",
   "block.brass_geodes.emerald_cluster": "Amas d'émeraude",
@@ -50,5 +50,28 @@
   "block.brass_geodes.emerald_tinted_glass": "Vitres teintées en émeraude",
   "block.brass_geodes.ruby_tinted_glass" : "Vitres teintées en rubis",
   "block.brass_geodes.sapphire_tinted_glass": "Vitres teintées en saphir",
-  "block.brass_geodes.topaz_tinted_glass": "Vitres teintées en topaze"
+  "block.brass_geodes.topaz_tinted_glass": "Vitres teintées en topaze",
+
+  "block.brass_geodes.gemcorn_branch": "Gemcorn Branch",
+  "block.brass_geodes.amethyst_branch": "Amethyst Branch",
+  "block.brass_geodes.topaz_branch": "Topaz Branch",
+  "block.brass_geodes.sapphire_branch": "Sapphire Branch",
+  "block.brass_geodes.ruby_branch": "Ruby Branch",
+  "block.brass_geodes.emerald_branch": "Emerald Branch",
+  "block.brass_geodes.diamond_branch": "Diamond Branch",
+
+  "block.brass_geodes.gemcorn_trunk": "Gemcorn Trunk",
+  "block.brass_geodes.budding_amethyst_trunk": "Budding Amethyst Trunk",
+  "block.brass_geodes.budding_topaz_trunk": "Budding Topaz Trunk",
+  "block.brass_geodes.budding_sapphire_trunk": "Budding Sapphire Trunk",
+  "block.brass_geodes.budding_ruby_trunk": "Budding Ruby Trunk",
+  "block.brass_geodes.budding_emerald_trunk": "Budding Emerald Trunk",
+  "block.brass_geodes.budding_diamond_trunk": "Budding Diamond Trunk",
+
+  "block.brass_geodes.amethyst_sapling": "Amethyst Sapling",
+  "block.brass_geodes.topaz_sapling": "Topaz Sapling",
+  "block.brass_geodes.ruby_sapling": "Ruby Sapling",
+  "block.brass_geodes.sapphire_sapling": "Sapphire Sapling",
+  "block.brass_geodes.emerald_sapling": "Emerald Sapling",
+  "block.brass_geodes.diamond_sapling": "Diamond Sapling"
 }
